[kcms/joystick] Fix minor leak

fd and oldcorr were not cleaned up before returning.

BUG: 385894
FIXED-IN: 5.21.3